--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
+APP_PORT=8080
+
 DB_USERNAME=root
 DB_PASSWORD=
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=
 
-APP_PORT=8080
+ACCESS_TOKEN_SECRET_KEY=
